[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/InventoryList.gd" type="Script" id=1]
[ext_resource path="res://assets/InventoryTheme.tres" type="Theme" id=2]
[ext_resource path="res://src/Record.gd" type="Script" id=3]
[ext_resource path="res://src/ItemList.gd" type="Script" id=4]

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.85, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 1.15 ]
}

[node name="InventoryList" type="Control"]
anchor_left = 1.0
anchor_right = 1.15
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/out = SubResource( 3 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YourInventory" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 153.0
margin_bottom = 499.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="VBoxContainer" parent="VBoxContainer/YourInventory"]
visible = false
margin_right = 153.0
size_flags_horizontal = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Record" type="HBoxContainer" parent="VBoxContainer/YourInventory/ItemList"]
visible = false
margin_right = 152.0
margin_bottom = 27.0
script = ExtResource( 3 )

[node name="Button" type="Button" parent="VBoxContainer/YourInventory/ItemList/Record"]
margin_right = 74.0
margin_bottom = 27.0
size_flags_horizontal = 3
toggle_mode = true
text = "Item"
flat = true
align = 0

[node name="Label" type="Label" parent="VBoxContainer/YourInventory/ItemList/Record"]
margin_left = 78.0
margin_top = 3.0
margin_right = 152.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
visible = false
margin_top = 596.0
margin_right = 153.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CashLabel" type="Label" parent="VBoxContainer"]
margin_top = 503.0
margin_right = 153.0
margin_bottom = 524.0
text = "0 Piniondz"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountLabel" type="Label" parent="VBoxContainer"]
margin_top = 528.0
margin_right = 153.0
margin_bottom = 549.0
text = "to sell/buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountSlider" type="HSlider" parent="VBoxContainer"]
margin_top = 553.0
margin_right = 153.0
margin_bottom = 569.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 573.0
margin_right = 153.0
margin_bottom = 600.0
text = "SELL"

[connection signal="item_selected" from="VBoxContainer/YourInventory/ItemList" to="." method="_on_inv_item_selected"]
[connection signal="value_changed" from="VBoxContainer/AmountSlider" to="." method="_on_AmountSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
